--- a/src/variables.scss
+++ b/src/variables.scss
@@ -7,7 +7,7 @@ $font-family: 'Roboto', sans-serif;
 $font-color: #212121;
 
 $font-size: 1rem;
-$font-size-retina: 1.5rem;
+$font-size-retina: 1.2rem;
 
 $touch-height: 44px;
 $gutter: 14px;
